# simple-project-template

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
project-backend/: pyproject.toml
project-backend/src/project_backend/: __init__.py
project-backend/src/project_backend/core/: core.py
project-shared/: pyproject.toml
project-shared/src/project_shared/: __init__.py
project-shared/src/project_shared/helper/: util.py
tests/test_project_shared/helper/: test_util.py
