[project]
name = "project-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]  # Ensures src/ is in path
