[project]
name = "project-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]  # Ensures src/ is in path

[tool.uv.workspace]
members = ["project-my-package", "project-mypackage", "mypackagename", "project-mypackagename", "mypackage", "foo", "project-foo", "project-zoo", "project-koo", "project-loo", "project-xoo", "project-hoo", "project-soo", "project-aoo", "project-qoo", "project-woo"]
